<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/movie_list_thumbnail"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/movie_detail_description"/>

    <RelativeLayout
        android:id="@+id/movie_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/movie_list_thumbnail">

        <TextView
            android:id="@+id/movie_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="@string/movie_detail_title" />

        <TextView
            android:id="@+id/movie_list_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_list_description"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="14sp"
            android:text="@string/movie_detail_characters" />

        <TextView
            android:id="@+id/movie_list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_list_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:maxLines="3"
            android:textSize="9sp"
            android:text="@string/movie_detail_description"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/movie_list_hasSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_list_characters"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:textSize="11sp"
            android:text="@string/has_seen_question"
            tools:ignore="SmallSp" />

    </RelativeLayout>




</RelativeLayout>

